Fixed gateway issue